[DO NOT MERGE] clk: sunxi-ng: sun4i-a10: Always parent GPU clock to pll-gpu
Avoids GPU clock interfering with display engine clocks.

Signed-off-by: Jonathan Liu <net147@gmail.com>

--- a/arch/arm/boot/dts/sun7i-a20.dtsi
+++ b/arch/arm/boot/dts/sun7i-a20.dtsi
@@ -1280,6 +1280,7 @@
 			resets = <&ccu RST_GPU>;
 
 			assigned-clocks = <&ccu CLK_GPU>;
+			assigned-clock-parents = <&ccu CLK_PLL_GPU>;
 			assigned-clock-rates = <384000000>;
 		};
 
